--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -28,9 +28,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Spaceships" asp-action="Index">Spaceship</a>
                         </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="RealEstates" asp-action="Index">Real Estates</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="OpenWeathers" asp-action="Index">Open Weather</a>
                         </li>
                     </ul>
                 </div>
