--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-controller="RealEstates" asp-action="Index">Real Estates</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Kindergarten" asp-action="Index">Kindergarten</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="OpenWeathers" asp-action="Index">Open Weather</a>
                         </li>
                     </ul>
