ChuckNorris (dont know in what mistake) ja Kindergarten (no migrations and controller) dont work

--- a/Shop/Shop/Views/Kindergarten/CreateUpdate.cshtml
+++ b/Shop/Shop/Views/Kindergarten/CreateUpdate.cshtml
@@ -14,6 +14,7 @@ else
 <div>
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" />
+        <input asp-for="CreatedAt" type="hidden" />
         
         <div class="form-group row">
             <label asp-for="GroupName" class="col-sm-2 col-form-label"></label>
@@ -58,21 +59,3 @@ else
 
     </form>
 </div>
-
-@section Scripts
-    {
-    <script>
-        $(document).ready(function () {
-            $('.custom-file-input').on("change", function () {
-                var fileLabel = $(this).next('.custom-file-label');
-                var files = $(this)[0].files;
-                if (files.length > 1) {
-                    fileLabel.html(files.length + ' files selected');
-                }
-                else if (files.length == 1) {
-                    fileLabel.html(files[0].name);
-                }
-            });
-        });
-    </script>
-}
