--- a/Shop/Shop/Views/Kindergarten/Delete.cshtml
+++ b/Shop/Shop/Views/Kindergarten/Delete.cshtml
@@ -30,6 +30,15 @@
             <label asp-for="Teacher" class="col-sm-2 col-form-label"></label>
             @Html.DisplayFor(model => Model.Teacher)
         </div>
+        <div class="form-group row">
+            <label asp-for="CreatedAt" class="col-sm-2 col-form-label"></label>
+            @Html.DisplayFor(model => Model.CreatedAt)
+        </div>
+
+        <div class="form-group row">
+            <label asp-for="UpdatedAt" class="col-sm-2 col-form-label"></label>
+            @Html.DisplayFor(model => Model.UpdatedAt)
+        </div>
 
     </dl>
     <hr />
