--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="ChuckNorris" asp-action="Index">Chuck Norris</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Coctails" asp-action="Index">Coctails</a>
+                        </li>
                     </ul>
                 </div>
             </div>
