--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <a class="nav-link text-dark" asp-controller="ChuckNorris" asp-action="Index">Chuck Norris</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Coctails" asp-action="Index">Coctails</a>
+                            <a class="nav-link text-dark" asp-controller="Cocktails" asp-action="Index">Cocktail</a>
                         </li>
                     </ul>
                 </div>
