--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="AccuWeather" asp-action="Index">AccuWeather</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="ChatIndex">SignalR chat</a>
+                        </li>
                     </ul>
                 </div>
             </div>
