--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -50,6 +50,14 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="ChatIndex">SignalR chat</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Accounts" asp-action="Register">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Accounts" asp-action="Login">Login</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
