Login and Register

--- a/Shop/Shop/Views/Accounts/Login.cshtml
+++ b/Shop/Shop/Views/Accounts/Login.cshtml
@@ -32,7 +32,7 @@
                 Login
             </button>
                 <div>
-                    <a asp-action="ForgotPassword"></a>
+                    <a asp-action="ForgotPassword">Forgot Password?</a>
                 </div>
         </form>
 
