--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                             <a class="nav-link text-dark" asp-controller="Cocktails" asp-action="Index">Cocktail</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="AccuWeather" asp-action="Index">AccuWeather</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AccuWeather" asp-action="Index">AccuWeather</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="ChatIndex">SignalR chat</a>
