AccuWearther is fixed and done

--- a/Shop/Shop/Views/AccuWeather/AccuWeathers.cshtml
+++ b/Shop/Shop/Views/AccuWeather/AccuWeathers.cshtml
@@ -27,24 +27,9 @@
             @Html.DisplayFor(model=>model.HeadlinesEndDate)
         </div>
 
-
-        <div class="form-group row">
-            <label asp-for="DailyForecastDaysIconPhrase" class="col-sm-2 col-form-label">
-                Day forecast
-            </label>
-            @Html.DisplayFor(model=>model.DailyForecastDaysIconPhrase)
-        </div>
-
-        <div class="form-group row">
-            <label asp-for="DailyForecastNightsIconPhrase" class="col-sm-2 col-form-label">
-                Night Forecast
-            </label>
-            @Html.DisplayFor(model=>model.DailyForecastNightsIconPhrase)
-        </div>
-
         <div class="form-group row">
             <label asp-for="DailyForecastTemperaturesMaximumsValue" class="col-sm-2 col-form-label">
-                Today  Temperature ( Max.-Fahrenheit)
+                Today Max Temperature 
             </label>
             @Html.DisplayFor(model=>model.DailyForecastTemperaturesMaximumsValue)
             @Html.DisplayFor(model=>model.DailyForecastTemperaturesMaximumsUnit)
@@ -53,12 +38,11 @@
 
         <div class="form-group row">
             <label asp-for="DailyForecastTemperaturesMinimumsValue" class="col-sm-2 col-form-label">
-                Today Temperature (Min-Fahrenheit)
+                Today Min Temperature 
             </label>
             @Html.DisplayFor(model=>model.DailyForecastTemperaturesMinimumsValue)
             @Html.DisplayFor(model=>model.DailyForecastTemperaturesMinimumsUnit)
         </div>
-
 
         <div class="form-group row">
             <label asp-for="HeadlinesText" class="col-sm-2 col-form-label">
@@ -72,13 +56,6 @@
                 Warning
             </label>
             @Html.DisplayFor(model=>model.HeadlinesCategory)
-        </div>
-
-        <div class="form-group row">
-            <label asp-for="HeadlinesSeverity" class="col-sm-2 col-form-label">
-                Severity
-            </label>
-            @Html.DisplayFor(model=>model.HeadlinesSeverity)
         </div>
 
         <div class="form-group row">
