--- a/Shop/Shop/Views/Accounts/Login.cshtml
+++ b/Shop/Shop/Views/Accounts/Login.cshtml
@@ -35,6 +35,30 @@
                     <a asp-action="ForgotPassword">Forgot Password?</a>
                 </div>
         </form>
-
     </div>
+
+    <div class="col-md-6">
+        <h1>Exteral Login</h1>
+        <hr />
+        @{
+            if (Model.ExternalLogins.Count == 0)
+            {
+                <div>No external login</div>
+            }
+            else
+            {
+                <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                    <div>
+                        @foreach (var provider in Model.ExternalLogins)
+                        {
+                            <button type="submit" class="btn btn-primary" style="width:auto" name="provider" value="@provider.Name" title="Login using your @provider.DisplayName account">
+                            @provider.DisplayName
+                            </button>
+                        }
+                    </div>                
+                </form>
+            }
+        }
+    </div>
+
 </div>
