--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -63,8 +63,8 @@
                                         Manage Button 
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <li>Reset password</li>
-                                        <li>Change password</li>
+                                        <li><a class="dropdown-item" asp-controller="Accounts" asp-action="ResetPassword">Reset Password</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Accounts" asp-action="ChangePassword">Change Password</a></li>
                                     </ul>
                                 </div>
                             </li>
